@Scheduled activado/ tipado y logica corregida